// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner accepts non-preset colors 1`] = `
.c2 {
  text-align: left;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  font-size: 14px;
}

.c0 {
  text-align: left;
  background-color: #4f6f8f;
  color: #0a0;
}

<div
  className="c0"
  color="green"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      width={1}
    >
      <span
        className="c3"
        fontSize={1}
      />
    </div>
  </div>
</div>
`;

exports[`Banner renders content from children props 1`] = `
.c4 {
  text-align: left;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  font-size: 14px;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  margin-top: -2px;
  margin-right: 8px;
  width: 24px;
}

.c3 {
  outline: none;
}

.c0 {
  text-align: left;
  background-color: #0a0;
  color: #fff;
}

<div
  className="c0"
  color="text.lightest"
>
  <div
    className="c1"
  >
    <svg
      aria-hidden={true}
      className="c2 c3"
      fill="currentcolor"
      focusable={false}
      height={24}
      role="img"
      tabIndex={-1}
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm-1.7 14.5L6 12.2 7.2 11l3.1 3.1 6.5-6.5L18 8.8l-7.7 7.7z"
      />
    </svg>
    <div
      className="c4"
      width={1}
    >
      <span
        className="c5"
        fontSize={1}
      />
      <span>
        123
      </span>
    </div>
  </div>
</div>
`;

exports[`Banner renders with blue bg 1`] = `
.c4 {
  text-align: left;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  font-size: 14px;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  margin-top: -2px;
  margin-right: 8px;
  width: 24px;
}

.c3 {
  outline: none;
}

.c0 {
  text-align: left;
  background-color: #0068EF;
  color: #fff;
}

<div
  className="c0"
  color="text.lightest"
>
  <div
    className="c1"
  >
    <svg
      aria-hidden={true}
      className="c2 c3"
      fill="currentcolor"
      focusable={false}
      height={24}
      role="img"
      tabIndex={-1}
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
      />
    </svg>
    <div
      className="c4"
      width={1}
    >
      <span
        className="c5"
        fontSize={1}
      />
    </div>
  </div>
</div>
`;

exports[`Banner renders with custom iconName and size 1`] = `
.c4 {
  text-align: left;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  font-size: 14px;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  margin-top: -2px;
  margin-right: 8px;
  width: 24px;
}

.c3 {
  outline: none;
}

.c0 {
  text-align: left;
  background-color: #0a0;
  color: #fff;
}

<div
  className="c0"
  color="text.lightest"
>
  <div
    className="c1"
  >
    <svg
      aria-hidden={true}
      className="c2 c3"
      fill="currentcolor"
      focusable={false}
      height={24}
      role="img"
      tabIndex={-1}
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm-1.7 14.5L6 12.2 7.2 11l3.1 3.1 6.5-6.5L18 8.8l-7.7 7.7z"
      />
    </svg>
    <div
      className="c4"
      width={1}
    >
      <span
        className="c5"
        fontSize={1}
      />
    </div>
  </div>
</div>
`;

exports[`Banner renders with green bg 1`] = `
.c4 {
  text-align: left;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  font-size: 14px;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  margin-top: -2px;
  margin-right: 8px;
  width: 24px;
}

.c3 {
  outline: none;
}

.c0 {
  text-align: left;
  background-color: #0a0;
  color: #fff;
}

<div
  className="c0"
  color="text.lightest"
>
  <div
    className="c1"
  >
    <svg
      aria-hidden={true}
      className="c2 c3"
      fill="currentcolor"
      focusable={false}
      height={24}
      role="img"
      tabIndex={-1}
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm-1.7 14.5L6 12.2 7.2 11l3.1 3.1 6.5-6.5L18 8.8l-7.7 7.7z"
      />
    </svg>
    <div
      className="c4"
      width={1}
    >
      <span
        className="c5"
        fontSize={1}
      />
    </div>
  </div>
</div>
`;

exports[`Banner renders with header node 1`] = `
<DocumentFragment>
  .c5 {
  text-align: left;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  font-size: 14px;
}

.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  margin-top: -2px;
  margin-right: 8px;
  width: 24px;
}

.c4 {
  outline: none;
}

.c1 {
  text-align: left;
  background-color: secondary.base;
  color: text.lightest;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

<div
    class="c0"
  >
    <div
      class="c1"
      color="text.lightest"
    >
      <div
        class="c2"
      >
        <svg
          aria-hidden="true"
          class="c3 c4"
          fill="currentcolor"
          focusable="false"
          height="24"
          role="img"
          tabindex="-1"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm-1.7 14.5L6 12.2 7.2 11l3.1 3.1 6.5-6.5L18 8.8l-7.7 7.7z"
          />
        </svg>
        <div
          class="c5"
          width="1"
        >
          <h3
            class=""
          >
            Hello world
          </h3>
          <span
            class="c6"
            font-size="1"
          >
            <div
              class=""
            >
              Text
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Banner renders with lightBlue bg 1`] = `
.c4 {
  text-align: left;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  font-size: 14px;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  margin-top: -2px;
  margin-right: 8px;
  width: 24px;
}

.c3 {
  outline: none;
}

.c0 {
  text-align: left;
  background-color: #e8f2ff;
  color: #049;
}

<div
  className="c0"
  color="primary.dark"
>
  <div
    className="c1"
  >
    <svg
      aria-hidden={true}
      className="c2 c3"
      fill="currentcolor"
      focusable={false}
      height={24}
      role="img"
      tabIndex={-1}
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
      />
    </svg>
    <div
      className="c4"
      width={1}
    >
      <span
        className="c5"
        fontSize={1}
      />
    </div>
  </div>
</div>
`;

exports[`Banner renders with lightGreen bg 1`] = `
.c4 {
  text-align: left;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  font-size: 14px;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  margin-top: -2px;
  margin-right: 8px;
  width: 24px;
}

.c3 {
  outline: none;
}

.c0 {
  text-align: left;
  background-color: #ecf7ec;
  color: #060;
}

<div
  className="c0"
  color="secondary.dark"
>
  <div
    className="c1"
  >
    <svg
      aria-hidden={true}
      className="c2 c3"
      fill="currentcolor"
      focusable={false}
      height={24}
      role="img"
      tabIndex={-1}
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm-1.7 14.5L6 12.2 7.2 11l3.1 3.1 6.5-6.5L18 8.8l-7.7 7.7z"
      />
    </svg>
    <div
      className="c4"
      width={1}
    >
      <span
        className="c5"
        fontSize={1}
      />
    </div>
  </div>
</div>
`;

exports[`Banner renders with lightRed bg 1`] = `
.c4 {
  text-align: left;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  font-size: 14px;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  margin-top: -2px;
  margin-right: 8px;
  width: 24px;
}

.c3 {
  outline: none;
}

.c0 {
  text-align: left;
  background-color: #fbebeb;
  color: #800;
}

<div
  className="c0"
  color="error.dark"
>
  <div
    className="c1"
  >
    <svg
      aria-hidden={true}
      className="c2 c3"
      fill="currentcolor"
      focusable={false}
      height={24}
      role="img"
      tabIndex={-1}
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm1 11h-2V7h2v6zm0 4h-2v-2h2v2z"
      />
    </svg>
    <div
      className="c4"
      width={1}
    >
      <span
        className="c5"
        fontSize={1}
      />
    </div>
  </div>
</div>
`;

exports[`Banner renders with no props other than theme 1`] = `
.c4 {
  text-align: left;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  font-size: 14px;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  margin-top: -2px;
  margin-right: 8px;
  width: 24px;
}

.c3 {
  outline: none;
}

.c0 {
  text-align: left;
  background-color: #0a0;
  color: #fff;
}

<div
  className="c0"
  color="text.lightest"
>
  <div
    className="c1"
  >
    <svg
      aria-hidden={true}
      className="c2 c3"
      fill="currentcolor"
      focusable={false}
      height={24}
      role="img"
      tabIndex={-1}
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm-1.7 14.5L6 12.2 7.2 11l3.1 3.1 6.5-6.5L18 8.8l-7.7 7.7z"
      />
    </svg>
    <div
      className="c4"
      width={1}
    >
      <span
        className="c5"
        fontSize={1}
      />
    </div>
  </div>
</div>
`;

exports[`Banner renders with orange bg 1`] = `
.c4 {
  text-align: left;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  font-size: 14px;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  margin-top: -2px;
  margin-right: 8px;
  width: 24px;
}

.c3 {
  outline: none;
}

.c0 {
  text-align: left;
  background-color: #f68013;
  color: #fff;
}

<div
  className="c0"
  color="text.lightest"
>
  <div
    className="c1"
  >
    <svg
      aria-hidden={true}
      className="c2 c3"
      fill="currentcolor"
      focusable={false}
      height={24}
      role="img"
      tabIndex={-1}
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M1 21.5h22l-11-19-11 19zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
      />
    </svg>
    <div
      className="c4"
      width={1}
    >
      <span
        className="c5"
        fontSize={1}
      />
    </div>
  </div>
</div>
`;

exports[`Banner renders with red bg 1`] = `
.c4 {
  text-align: left;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  font-size: 14px;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  margin-top: -2px;
  margin-right: 8px;
  width: 24px;
}

.c3 {
  outline: none;
}

.c0 {
  text-align: left;
  background-color: #c00;
  color: #fff;
}

<div
  className="c0"
  color="text.lightest"
>
  <div
    className="c1"
  >
    <svg
      aria-hidden={true}
      className="c2 c3"
      fill="currentcolor"
      focusable={false}
      height={24}
      role="img"
      tabIndex={-1}
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm1 11h-2V7h2v6zm0 4h-2v-2h2v2z"
      />
    </svg>
    <div
      className="c4"
      width={1}
    >
      <span
        className="c5"
        fontSize={1}
      />
    </div>
  </div>
</div>
`;

exports[`Banner renders with text node 1`] = `
.c4 {
  text-align: left;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  font-size: 16px;
  font-weight: 700;
  line-height: 1.25;
}

.c6 {
  font-size: 14px;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  margin-top: -2px;
  margin-right: 8px;
  width: 24px;
}

.c3 {
  outline: none;
}

.c0 {
  text-align: left;
  background-color: secondary.base;
  color: text.lightest;
}

<div
  className="c0"
  color="text.lightest"
>
  <div
    className="c1"
  >
    <svg
      aria-hidden={true}
      className="c2 c3"
      fill="currentcolor"
      focusable={false}
      height={24}
      role="img"
      tabIndex={-1}
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm-1.7 14.5L6 12.2 7.2 11l3.1 3.1 6.5-6.5L18 8.8l-7.7 7.7z"
      />
    </svg>
    <div
      className="c4"
      width={1}
    >
      <div
        className="c5"
      >
        Header
      </div>
      <span
        className="c6"
        fontSize={1}
      >
        <div
          className=""
        >
          Text
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`Banner renders with text string 1`] = `
.c4 {
  text-align: left;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  font-size: 16px;
  font-weight: 700;
  line-height: 1.25;
}

.c6 {
  font-size: 14px;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  margin-top: -2px;
  margin-right: 8px;
  width: 24px;
}

.c3 {
  outline: none;
}

.c0 {
  text-align: left;
  background-color: secondary.base;
  color: text.lightest;
}

<div
  className="c0"
  color="text.lightest"
>
  <div
    className="c1"
  >
    <svg
      aria-hidden={true}
      className="c2 c3"
      fill="currentcolor"
      focusable={false}
      height={24}
      role="img"
      tabIndex={-1}
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm-1.7 14.5L6 12.2 7.2 11l3.1 3.1 6.5-6.5L18 8.8l-7.7 7.7z"
      />
    </svg>
    <div
      className="c4"
      width={1}
    >
      <div
        className="c5"
      >
        Header
      </div>
      <span
        className="c6"
        fontSize={1}
      >
        Text
      </span>
    </div>
  </div>
</div>
`;
